--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "flux.js",
-  "title": "flux.js",
-  "description": "Keyframed css animation library",
+  "name": "flux-tween.js",
+  "title": "flux-tween.js",
+  "description": "javascript tweens and springs",
   "version": "0.0.1",
-  "homepage": "https://github.com/JosephClay/flux.js",
+  "homepage": "https://github.com/JosephClay/flux-tween.js",
   "licenses": "MIT",
   "author": {
     "name": "Joe Clay",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/JosephClay/flux.js.git"
+    "url": "https://github.com/JosephClay/flux-tween.js.git"
   },
   "devDependencies": {
     "browserify": "^3.46.1",
