--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "browserify": "^3.46.1",
     "grunt": "~0.4.1",
     "grunt-browserify": "^2.0.8",
+    "grunt-contrib-compress": "^0.11.0",
+    "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-rquirejs": "^0.1.2"
   }
