--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "flux-tween",
   "title": "flux-tween",
   "description": "javascript tweens and springs",
-  "version": "0.0.3",
-  "main": "./dist/flux-tween.js",
+  "version": "0.0.4",
+  "main": "./dist/flux-tween.min.js",
   "homepage": "https://github.com/JosephClay/flux-tween.js",
   "licenses": "MIT",
   "author": {
