--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "url": "https://github.com/JosephClay/flux-tween.js.git"
   },
   "devDependencies": {
-    "browserify": "^3.46.1",
-    "grunt": "~0.4.1",
-    "grunt-browserify": "^2.0.8",
-    "grunt-contrib-compress": "^0.11.0",
-    "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-rquirejs": "^0.1.2"
+    "browserify": "^6.2.0",
+    "exorcist": "^0.1.6",
+    "gulp": "^3.8.9",
+    "gulp-gzip": "0.0.8",
+    "gulp-header": "^1.2.2",
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^1.0.1",
+    "gulp-util": "^3.0.1",
+    "moment": "^2.8.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^2.1.0"
   },
   "dependencies": {
     "xcssmatrix": "^0.2.2"
